2018-11-07 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.c: Silence a couple of warnings.

2018-10-30 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_probab_prime_p): BPSW test for primality.

	* tests/hex-random.c (hex_random_lucm_op): New function.
	* tests/hex-random.h: Declare it.
	* tests/mini-random.c (mini_random_lucm_op): New function.
	* tests/mini-random.h: Declare it.
	* mini-gmp/tests/t-lucm.c: New test
	* mini-gmp/tests/Makefile (CHECK_PROGRAMS): Add t-lucm.

2018-09-07  Niels Möller  <nisse@lysator.liu.se>

	* tests/t-div.c (testmain): Add missing const declarations.

2018-05-20 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_get_d): Convert a fixed number of
	bits (GMP_DBL_MANT_BITS) to avoid rounding.

	* mini-mpq.c (mpq_mul): Use mpq_nan_init.

	* tests/t-double.c (test_matissa): Tests converted bits.

2018-04-26 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-mpq.c: New file, mini-implementation of mpq_t.
	* mini-mpq.h: New file, definitions for mpq_t.
	* tests/t-mpq_addsub: New tests for mpq_add and sub.
	* tests/t-mpq_muldiv: New tests for mpq_mul and div.
	* tests/t-mpq_muldiv_2exp: New tests for mpq_*_2exp.

2018-03-11  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (mpn_div_qr_2_preinv): Drop separate rp argument.
	Clobber input np, and store remainder in np[0] and np[1]. This is
	all the current caller needs, and it eliminates one allocation in
	the common case of un-normalized d.
	(mpn_div_qr_2): Delete #if:ed out function.
	(mpn_div_qr_preinv): Update the only call site for
	mpn_div_qr_2_preinv.

2018-02-10  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (mpn_div_qr_1_preinv): When qp is non-NULL, reuse
	area for shifted input, to avoid an allocation.

2018-01-15 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (gmp_popcount_limb): Micro-optimisations.
	* tests/t-comb.c (checkWilson): Check also mpz_2fac_ui.

2017-12-30 Marco Bodrato <bodrato@mail.dm.unipi.it>
